--- a/previews/PR442/examples/docs_4_rational_opt/index.html
+++ b/previews/PR442/examples/docs_4_rational_opt/index.html
@@ -34,17 +34,17 @@ LMO: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   5.780380e-01   1.729990e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   5.801382e-01   3.447455e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   5.822366e-01   5.152545e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   5.846318e-01   6.841913e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   5.870797e-01   8.516732e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   5.897175e-01   1.017436e+02
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   5.924218e-01   1.181590e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   5.951028e-01   1.344306e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   5.980163e-01   1.504976e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.011442e-01   1.663494e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.022775e-01   1.676968e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   7.041190e-01   1.420214e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   7.059744e-01   2.832964e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   7.078949e-01   4.237917e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   7.103104e-01   5.631341e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   7.133258e-01   7.009419e+01
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   7.163945e-01   8.375273e+01
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   7.197724e-01   9.725297e+01
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   7.237932e-01   1.105288e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   7.279387e-01   1.236368e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   7.322551e-01   1.365644e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   7.339628e-01   1.376092e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -67,16 +67,16 @@ LMO: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   4.790571e-01   2.087434e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   4.809633e-01   4.158322e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   4.830726e-01   6.210247e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   4.853275e-01   8.241857e+01
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   4.878863e-01   1.024829e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   4.907905e-01   1.222518e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   4.938738e-01   1.417366e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   4.972680e-01   1.608790e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   5.006990e-01   1.797487e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   5.043855e-01   1.982611e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   5.052511e-01   1.979214e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   6.288965e-01   1.590087e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   6.305600e-01   3.171784e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   6.322342e-01   4.745077e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   6.352597e-01   6.296637e+01
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   6.385983e-01   7.829648e+01
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   6.425142e-01   9.338314e+01
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   6.470825e-01   1.081779e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   6.524530e-01   1.226142e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   6.571576e-01   1.369534e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   6.637473e-01   1.506597e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   6.650167e-01   1.503722e+02
 -------------------------------------------------------------------------------------------------
-  0.994661 seconds (1.58 M allocations: 88.684 MiB, 17.74% gc time, 1.30% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Tuesday 24 October 2023 13:27">Tuesday 24 October 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  1.030958 seconds (1.58 M allocations: 88.703 MiB, 1.51% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Tuesday 24 October 2023 15:19">Tuesday 24 October 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
